Fix result entry workflow: Allow entry for IN_PROGRESS/ASSIGNED, auto-complete on submission. Fix patient search and TEST_TECHNICIAN permissions

--- a/lims-backend/.env.example
+++ b/lims-backend/.env.example
@@ -1,25 +1,33 @@
-# Database Configuration
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=postgres
-DATABASE_NAME=lims_db
+# Local Development Environment Variables Template
+# Copy this file to .env and fill in your actual values
 
-# JWT Configuration
-JWT_SECRET=your-secret-key-change-in-production
-JWT_EXPIRES_IN=15m
-JWT_REFRESH_SECRET=your-refresh-secret-key-change-in-production
-JWT_REFRESH_EXPIRES_IN=7d
+# Database Configuration
+# Option 1: Use Render PostgreSQL (recommended for shared development)
+DATABASE_URL=postgresql://username:password@host:port/database
+
+# Option 2: Use local PostgreSQL (uncomment and configure if using local DB)
+# DATABASE_HOST=localhost
+# DATABASE_PORT=5432
+# DATABASE_USERNAME=postgres
+# DATABASE_PASSWORD=postgres
+# DATABASE_NAME=lims_db
 
 # Application Configuration
-PORT=3000
 NODE_ENV=development
+PORT=3000
+
+# JWT Secrets (generate new ones for security)
+# You can generate secrets using: openssl rand -base64 32
+JWT_SECRET=your-jwt-secret-here
+JWT_REFRESH_SECRET=your-jwt-refresh-secret-here
+
+# Frontend Configuration
 FRONTEND_URL=http://localhost:3001
 
-# File Storage
-UPLOAD_PATH=./uploads/reports
-
-# Security
+# Application Settings
+DIAGNOSTIC_CENTER_NAME=Diagnostic Center
 BCRYPT_ROUNDS=10
-RATE_LIMIT_TTL=60
-RATE_LIMIT_MAX=100
+
+# Throttling Configuration
+THROTTLE_LIMIT=100
+THROTTLE_AUTH_LIMIT=5
