--- a/lims-backend/render.yaml
+++ b/lims-backend/render.yaml
@@ -1,15 +1,3 @@
-services:
-  # PostgreSQL Database
-  - type: pserv
-    name: lims-postgres
-    env: docker
-    plan: free
-    region: oregon
-    databases:
-      - name: lims_db
-        databaseName: lims_db
-        user: lims_user
-
   # NestJS Backend API
   - type: web
     name: lims-backend
@@ -25,9 +13,7 @@ services:
       - key: PORT
         value: 3000
       - key: DATABASE_URL
-        fromDatabase:
-          name: lims-postgres
-          property: connectionString
+        sync: false
       - key: JWT_SECRET
         generateValue: true
       - key: JWT_REFRESH_SECRET
