--- a/lims-frontend/package.json
+++ b/lims-frontend/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.553.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
+    "react-barcode": "^1.6.1",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.51.0",
     "react-pdf": "^10.2.0",
