--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,11 @@ build/
 *.tsbuildinfo
 
 # Environment files
-.env
-.env.local
-.env.*.local
-**/.env
-**/.env.local
+!*.env
+!*.env.local
+!*.env.*.local
+!**/.env
+!**/.env.local
 
 # Logs
 *.log
